# json-dencoder

./: CMakeLists.txt
exec/tests/: main.cpp
src/kramer/: variable.cpp  variable.hpp
